# JPEGAA

./: CMakeLists.txt  README.md
JPEGAA/: CMakeLists.txt  JAACfg.h  JPEGAA.cpp  JPEGAA.h
rt/: README.md
rt/Config/: JPEGAA.xml
xymorg/: Cache.h  MemoryDumper.h  README.md  StringThing.h  XMLMicroParser.h  types.h  xymorg.h
xymorg/IMG/: CIBase2D.h  ColourConverter.h  ColourTable.h  Draw.h  FontStyle.h  Frame.h  Matte.h  Palette.h  RasterBuffer.h  TextBox.h  Train.h  consts.h  image.h  types.h
xymorg/IMG/CODECS/: Huffman.h  LZW.h
xymorg/IMG/ODI/DIB/: DIB.h  DIBODI.h
xymorg/IMG/ODI/GIF/: GIF.h  GIFODI.h
xymorg/IMG/ODI/JFIF/: JFIF.h  JFIFODI.h
xymorg/MISC/: PairColl.h
xymorg/MP/: Primitives.h
xymorg/WINDOWS/: strptime.h
